--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,18 @@ before_install:
 
 script:
   - docker run -e CI=true ibupatra/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: ""
+  app: "docker-react"
+  env: ""
+  bucket_name: ""
+  bucket_path: ""
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
+
+
